made reviews wrap correctly by setting max width for larger screens

--- a/Website/src/css/review.css
+++ b/Website/src/css/review.css
@@ -14,6 +14,7 @@
     padding: 16px;
     margin: 16px;
     min-width: 240px;
+    max-width: 25%;
 }
 textarea {
     font-size: 14px;
@@ -96,6 +97,7 @@ label {
     .review {
         width: 85%;
         margin: 8px 0;
+        max-width: 100%;
     }
 
     .reviews {
